--- a/soc-frontend/package.json
+++ b/soc-frontend/package.json
@@ -13,8 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "date-fns": "^2.30.0",
+    "jotai": "^2.12.5",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
